@@ -12,6 +12,8 @@ What's New in Python 2.6 beta 1?
 Core and Builtins
 -----------------
 
+- Add future_builtins.ascii().
+
 - Several set methods now accept multiple arguments:  update(), union(),
   intersection(), intersection_update(), difference(), and difference_update().
 
